Fix scroll and style issues when hovering a collapsed column
Part of story #14310 stop being bothered by the hidden add-in-place
editor when I drag and drop some cards

While dragging a card, when you drag over a collapsed column, no
horizontal scrollbar should appear. The "hover" visual style should not
flicker.

This change also migrates mouse events to pointer events. Pointer events
[0] handle more than mouse, they should offer better accessibility.

There is still a known issue existing in master:
When you drag over a collapsed column, the dropzone's height can
flicker. It will be handled in a dedicated change.

[0]: https://developer.mozilla.org/en-US/docs/Web/API/Pointer_events

--- a/plugins/taskboard/themes/includes/_body.scss
+++ b/plugins/taskboard/themes/includes/_body.scss
@@ -97,10 +97,9 @@
         background: mix($tlp-theme-color, $tlp-ui-white, 7%);
     }
 
-    > .drek-ghost,
+    // This includes drek-ghost
     > .taskboard-draggable-item {
-        opacity: 0;
-        white-space: nowrap;
+        display: none;
     }
 }
 
